# customer-churn-analytics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
data/: telco_customer_churn_clean_after_preprocessing.csv
docs/: index.md  installation.md  usage.md
models/: final_churn_model.pkl  preprocessor.pkl
notebook/: 01_data_understanding_and_eda.ipynb  02_preprocessing_and_feature_engineering.ipynb  03_model_training_and_evaluation.ipynb
src/customer_churn_analytics/: __init__.py  cli.py  customer_churn_analytics.py  feature_engineering.py  generate_synthetic_batch_data.py  synthetic_telco_batch_input_synthetic_data.csv
tests/: __init__.py  test_customer_churn_analytics.py
