[project]
name = "customer_churn_analytics"
version = "0.1.0"
description = "End-to-end customer churn analysis and prediction using data analytics and machine learning."
readme = "README.md"
authors = [
  {name = "Pratyush Basu", email = "basupratyush76@gmail.com"}
]
maintainers = [
  {name = "Pratyush Basu", email = "basupratyush76@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/Pratyush-Basu/customer_churn_analytics/issues"
changelog = "https://github.com/Pratyush-Basu/customer_churn_analytics/blob/master/changelog.md"
homepage = "https://github.com/Pratyush-Basu/customer_churn_analytics"

[project.scripts]
customer_churn_analytics = "customer_churn_analytics.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
